src/objects/Toggl_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer_Start__c</fullName>
        <label>Timer Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Toggl_ID__c</fullName>
        <externalId>true</externalId>
        <label>Toggl ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Toggl_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toggl Project</label>
        <referenceTo>Toggl_Project__c</referenceTo>
        <relationshipLabel>Toggl Time Entries</relationshipLabel>
        <relationshipName>Toggl_Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toggl_Updated__c</fullName>
        <label>Toggl Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Toggl_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toggl User</label>
        <referenceTo>Toggl_User__c</referenceTo>
        <relationshipLabel>Toggl Time Entries</relationshipLabel>
        <relationshipName>Toggl_Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Toggl Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Toggl_ID__c</columns>
        <columns>NAME</columns>
        <columns>Toggl_Project__c</columns>
        <columns>Toggl_User__c</columns>
        <columns>Timer_Start__c</columns>
        <columns>Duration__c</columns>
        <columns>Toggl_Updated__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toggl Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>